--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(40, 40, 40);
-  color: #c0c0c0;
+  color: white;
   /* Light gray color */
   width: 100%;
 }
@@ -45,7 +45,7 @@ p {
 }
 
 .item-container, .create-container, .login-form {
-  color: #d3d3d3;
+  color: white;
   /* Light gray color */
   background-color: #333333;
   /* Dark gray color */
